<resources>
    <string name="app_name">Individual3</string>
    <string name="primer_numero">Primer Numero</string>
    <string name="segundo_numero">Segundo Numero</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="button">Button</string>
    <string name="desarrollado_por_samf">Desarrollado por SAMF</string>
    <string name="todo">TODO</string>
    <string name="cerrar_app">Cerrar APP</string>
    <string name="division">Division</string>
    <string name="n_1">N°1</string>
    <string name="n_2">N°2</string>
    <string name="sum">+</string>
    <string name="rest">-</string>
    <string name="mult">x</string>
    <string name="div">/</string>
    <string name="result">Resultado</string>
    <string name="resultado_es">Resultado es</string>
</resources>